# Graduate-work

./: .env.cloud.example  .gitattributes  .gitignore  .sync-keycloak-ids.env  README.md  docker-compose.yml
local-server/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
local-server/caddy/: Caddyfile  Dockerfile
local-server/config/: default.toml  local.toml.example
local-server/local-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
local-server/local-backend/config/: default.toml  local.toml.example
local-server/local-backend/migrations/: 002_access.sql  004_zigbee.sql  005_sync.sql  008_physical_device_zigbee.sql  011_widget_dashboards.sql  012_modbus.sql  014_cloud_house_members.sql  015_house_plan.sql  015_user_display_name.sql  016_expand_resource_types.sql  017_user_auth.sql  018_widget_dashboard_last_pushed.sql  019_one_dashboard_per_house.sql
local-server/local-backend/src/application/: Cargo.toml
local-server/local-backend/src/application/src/: cloud_urls.rs  lib.rs
local-server/local-backend/src/application/src/handlers/: mod.rs
local-server/local-backend/src/application/src/ports/: access_repository.rs  access_sync_repository.rs  cloud_auth_client.rs  cloud_modbus_client.rs  cloud_physical_device_client.rs  cloud_scenario_client.rs  (+15 more)
local-server/local-backend/src/core/src/: errors.rs  lib.rs  mqtt_topics.rs
local-server/local-backend/src/gateway/: Cargo.toml
local-server/local-backend/src/gateway/src/: app_state.rs  config.rs  main.rs  mqtt_manager.rs
local-server/local-backend/src/gateway/tests/: health_test.rs
local-server/local-backend/src/infrastructure/: Cargo.toml
local-server/local-backend/src/infrastructure/src/: lib.rs
local-server/local-backend/src/interfaces/: Cargo.toml
local-server/local-backend/src/interfaces/src/: lib.rs  state.rs
local-server/local-frontend/: .dockerignore  .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
local-server/local-frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
local-server/local-frontend/src/api/: access-client.ts  access.ts  auth.ts  client.ts  local-access.ts  modbus.ts  physical-devices.ts  scenarios.ts  system.ts  widget-dashboards.ts  zigbee.ts
local-server/local-frontend/src/components/auth/: LoginGate.tsx
local-server/local-frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx  app-logo.tsx
local-server/local-frontend/src/components/shared/: AddDeviceDialog.tsx  AddModbusDeviceModal.tsx  AddZigbeeDeviceModal.tsx  DeviceCard.tsx  DeviceControlDrawer.tsx  DeviceHistoryPanel.tsx  HouseDetailPanel.tsx  ModbusDeviceDrawer.tsx  OtaPanel.tsx  PairingDialog.tsx  ScenarioDefinitionEditor.tsx  StatusBadge.tsx  SyncStatusPanel.tsx
local-server/local-frontend/src/components/widgets/: WidgetConfigDrawer.tsx  WidgetContainer.tsx  WidgetDashboardEditor.tsx  WidgetDashboardToolbar.tsx  WidgetGrid.tsx  WidgetPicker.tsx  command-value.ts  widget-registry.ts
local-server/local-frontend/src/hooks/: useModbusCoilState.ts  usePairing.ts  useZigbeeSocket.ts
local-server/local-frontend/src/i18n/messages/: en.ts  ru.ts
local-server/local-frontend/src/lib/: server-url.ts  sync-toast.ts  zigbee-color.ts
local-server/local-frontend/src/pages/: CatalogPage.tsx  DashboardPage.tsx  HousesPage.tsx  ModbusPage.tsx  PhysicalDevicesPage.tsx  PlaceholderPage.tsx  RoomsPage.tsx  ScenariosPage.tsx  SettingsPage.tsx  UsersPage.tsx  ZigbeePage.tsx
local-server/local-frontend/src/stores/: settings.store.ts
local-server/local-frontend/src/types/: index.ts
local-server/migrations/: 001_devices.sql  002_access.sql  003_scenarios.sql  006_app_settings.sql  007_access_sync.sql  009_scenario_sync.sql  010_phys_dev_cloud.sql  011_widget_dashboards.sql  013_house_members_sync.sql  016_expand_resource_types.sql
local-server/modbus-mqtt-bridge/: .dockerignore  .env.example  .gitignore  Cargo.toml
local-server/modbus-mqtt-bridge/mosquitto/config/: mosquitto.conf
local-server/modbus-mqtt-bridge/src/: main.rs
local-server/mosquitto/data/: mosquitto.db
local-server/src/application/: Cargo.toml
local-server/src/application/src/: lib.rs
local-server/src/application/src/ports/: access_repository.rs  access_sync_repository.rs  cloud_auth_client.rs  cloud_physical_device_client.rs  cloud_sync_client.rs  health.rs  mod.rs  modbus_repository.rs  mqtt_client.rs  physical_device_repository.rs  runtime_settings_repository.rs  scenario_repository.rs  zigbee_repository.rs
local-server/src/application/src/services/: actions.rs  conditions.rs  delta_puller.rs  exec_context.rs  mod.rs  physical_device_sync.rs  sync_conflict.rs  widget_dashboard_sync.rs  zigbee_realtime.rs
local-server/src/core/: Cargo.toml
local-server/src/core/src/: errors.rs  lib.rs
local-server/src/core/src/entities/: access.rs  device.rs  mod.rs  modbus.rs  physical_device.rs  scenario.rs  zigbee.rs
local-server/src/gateway/: Cargo.toml
local-server/src/gateway/src/: app_state.rs  config.rs  main.rs  mqtt_manager.rs
local-server/src/gateway/tests/: health_test.rs
local-server/src/infrastructure/: Cargo.toml
local-server/src/infrastructure/src/: lib.rs
local-server/src/infrastructure/src/http/: cloud_auth.rs  cloud_physical_device.rs  cloud_scenario.rs  cloud_sync.rs  cloud_widget_dashboard.rs  mod.rs
local-server/src/infrastructure/src/mqtt/: client.rs  ingest.rs  mod.rs  modbus_gateway.rs
local-server/src/infrastructure/src/persistence/: access.rs  access_sync.rs  devices.rs  health.rs  mod.rs  physical_devices.rs  pool.rs  scenarios.rs  settings.rs  sync_outbox.rs  widget_dashboards.rs  zigbee.rs
local-server/src/interfaces/: Cargo.toml
local-server/src/interfaces/src/: lib.rs  state.rs
local-server/src/interfaces/src/http/: device_categories.rs  devices.rs  error.rs  mod.rs  modbus.rs  scenario_executions.rs  scenarios.rs  system.rs  zigbee.rs
local-server/src/interfaces/src/websocket/: gateway.rs  mod.rs  protocol.rs
local-server/zigbee2mqtt/data/: configuration.yaml
(+1014 files in other folders)
