[package]
name = "modbus-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "modbus-mqtt-bridge"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
rumqttc      = "0.24"
serialport   = { version = "4", default-features = false }
rmodbus      = "0.9"
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
dotenvy      = "0.15"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
