[package]
name        = "local-server-application"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
description = "Application layer: ports (traits), use-case handlers, domain services."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
local-server-core = { path = "../core" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
tokio       = { workspace = true }
